# createac

./: .gitignore  Cargo.toml  JOURNAL.md  LICENSE-APACHE  LICENSE-MIT  README.md  SOURCES.md  build.sh  bundle.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  pr_check.yml
bundle/: index.html
bundle/.jsdos/: dosbox.conf
raw-assets/: creature-sheet.aseprite
resources/: createac.vgm
src/: audio.rs  create.rs  creature.rs  gfx.rs  lib.rs  menu.rs
